--- a/index.html
+++ b/index.html
@@ -41,14 +41,21 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Hi, I’m Giang, a data analyst.</h2>
+											<h2>
+												<div>
+													<span style="text-decoration: none;" href="" class="typewrite" data-period="2000" data-type='[ "Hi, I’m Giang, a data analyst.", "I’m self-study.", "I enjoy working with computers and numbers.", "Thank you for viewing my portfolio." ]'>
+													<span class="wrap"></span>
+													</span>
+												</div>
+											</h2>
 										</header>
+										
 										<p>My background as a Salesforce Administrator and Ecommerce Specialist in the BAYA Furniture & Decoration has given me a deep foundation in working with many systems in data collection, analysis, visualization, and coming up with insights and recommendations.</p>
-										<p>I’m self-study and enjoy working with the computer and numbers. At first, I used Excel and then learned more to use other tools like SQL, Power BI, and Python to help businesses unlock the power of their data.</p>
+										<p>I’m self-study and enjoy working with the computers and numbers. At first, I used Excel and then learned more to use other tools like SQL, Power BI, and Python to help businesses unlock the power of their data.</p>
 										<p>- Email: <b>giang.pnt1410@gmail.com</b></p>
 										<p>- Address: Ho Chi Minh city, Vietnam</p>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									
 								</div>
 								<div class="row">
 									<div class="column">
@@ -81,20 +88,24 @@
 								<ul class="features">
 									<li>
 										<a href="remote-working-survey.html">
-										<img src="..\images\remote-work-report.png" alt="Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?" width="100%">
+											<img src="images\remote-work-report.png" alt="Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?" width="100%">
 										</a>
 										<p>Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?</p>
 									</li>
 									<li>
-										<img src="..\images\wage-employee-by-industry.png" alt="The global Unicorn landscape" width="100%">
+										<img src="images\wage-employee-by-industry.png" alt="The global Unicorn landscape" width="100%">
 										<p>The global Unicorn landscape - Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</p>
 									</li>
 									<li>
-										<img src="..\images\wage-employee-by-industry.png" alt="What do wage & employment figures look like by industry?" width="100%">
+										<a href="us-labor-statistics.html">
+											<img src="images\wage-employee-by-industry.png" alt="What do wage & employment figures look like by industry?" width="100%">
+										</a>
 										<p>US Labor Statistics - What do wage & employment figures look like by industry?</p>
 									</li>
 									<li>
-										<img src="..\images\Hotel Group.png" alt="Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost" width="100%">
+										<a href="hotel-group.html">
+											<img src="images\Hotel Group.png" alt="Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost" width="100%">
+										</a>
 										<p>Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost</p>
 									</li>
 								</ul>
@@ -180,7 +191,7 @@
 								<li><a href="#" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Redesign: Giang Pham</p>
+						<p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: Giang Pham</p>
 					</footer>
 
 			</div>
@@ -194,5 +205,65 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+
+<!-- scripts to add typing effect-->
+<script>
+	var TxtType = function(el, toRotate, period) {
+        this.toRotate = toRotate;
+        this.el = el;
+        this.loopNum = 0;
+        this.period = parseInt(period, 10) || 2000;
+        this.txt = '';
+        this.tick();
+        this.isDeleting = false;
+    };
+
+    TxtType.prototype.tick = function() {
+        var i = this.loopNum % this.toRotate.length;
+        var fullTxt = this.toRotate[i];
+
+        if (this.isDeleting) {
+        this.txt = fullTxt.substring(0, this.txt.length - 1);
+        } else {
+        this.txt = fullTxt.substring(0, this.txt.length + 1);
+        }
+
+        this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+        var that = this;
+        var delta = 200 - Math.random() * 100;
+
+        if (this.isDeleting) { delta /= 2; }
+
+        if (!this.isDeleting && this.txt === fullTxt) {
+        delta = this.period;
+        this.isDeleting = true;
+        } else if (this.isDeleting && this.txt === '') {
+        this.isDeleting = false;
+        this.loopNum++;
+        delta = 500;
+        }
+
+        setTimeout(function() {
+        that.tick();
+        }, delta);
+    };
+
+    window.onload = function() {
+        var elements = document.getElementsByClassName('typewrite');
+        for (var i=0; i<elements.length; i++) {
+            var toRotate = elements[i].getAttribute('data-type');
+            var period = elements[i].getAttribute('data-period');
+            if (toRotate) {
+              new TxtType(elements[i], JSON.parse(toRotate), period);
+            }
+        }
+        // INJECT CSS
+        var css = document.createElement("style");
+        css.type = "text/css";
+        css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+        document.body.appendChild(css);
+    };
+</script>
 	</body>
 </html>
