--- a/adventure-works.html
+++ b/adventure-works.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>US Labor Statistics - What do wage & employment figures look like by industry?</title>
+		<title>Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>US Labor Statistics - What do wage & employment figures look like by industry?</h1>
-						<p>Skills: Exploratory data Analysis, storytelling</p>
+						<h1>Adventure Works - Sales & Customer Analysis</h1>
+						<p></p>
 					</header>
 
 				<!-- Main -->
@@ -28,22 +28,29 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images\wage-employee-by-industry.png" alt="US Labor Statistics - What do wage & employment figures look like by industry?" /></span>
+								<span class="image main"><img src="images\adventure-works-dashboard.png" alt="Adventure Works Dashboard"/></span>
 								<h2>1. Dataset Summary</h2>
-                                    <p>US labor statistics by industry & state, from 2017 to 2020.</p>
-                                <h2>2. Dimensions & Measures</h2>
-                                    <ul>
-                                        <li>Dimensions: Year, Industry, State </li>
-                                        <li>Measures: Establishments, Employees, Avg Annual Wage</li>
-                                    </ul>
-								<h2>3. Tool: Excel</h2>
-                                <h2>4. Data fields</h2>
-                                    <ul>
-                                        <li>Columns: 6</li>
-                                        <li>Rows: 1,918</li>
-                                    </ul>
+                                    <p>Adventure Works Cycles, a global manufacturing company, with sales data from 2015 to 2017.</p>
+                                <h2>2. DIM & FACT tables</h2>
+									<ul>
+										<li>DIM tables: Customers, Territories, Calendar, Categories, Subcategories, Products</li>
+										<li>FACT tables: Sales, Returns</li>
+									</ul>
+                                <h2>3. Tool: Power BI</h2>
+								<h2>4. The brief</h2>
+									<ul>
+										<li>Track KPIs (sales, revenue, profit, returns)</li>
+										<li>Compare country performance</li>
+										<li>Identify high-value customers and perform a deeper analysis of the customer file</li>
+									</ul>
+								<h2>5. Data Model</h2>
+								<img src="images\adventure-works-data-model.png" alt="Adventure Works- Data model" width="100%">
 
-                                    <center><img src="images\US Labor Statistics.png" alt="US Labor Statistics"></center>
+                                <footer class="major">
+									<ul class="actions special">
+										<li><a href="https://bit.ly/adventure_works_powerbi" class="button" target="_blank">View dashboard</a></li>
+									</ul>
+								</footer>
                             
                                     <p class="backtohomepage">
                                         <a href="https://giangpham1410.github.io/"> BACK TO HOMEPAGE</a>
