--- a/fuzzy-factory.html
+++ b/fuzzy-factory.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>US Labor Statistics - What do wage & employment figures look like by industry?</title>
+		<title>Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>US Labor Statistics - What do wage & employment figures look like by industry?</h1>
-						<p>Skills: Exploratory data Analysis, storytelling</p>
+						<h1>Fuzzy Factory - Analyze and optimize the business’ marketing channels, website, and product portfolio</h1>
+						<p></p>
 					</header>
 
 				<!-- Main -->
@@ -28,22 +28,28 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images\wage-employee-by-industry.png" alt="US Labor Statistics - What do wage & employment figures look like by industry?" /></span>
+								<span class="image main"><img src="images\fuzzy_factory_diagram.png" alt="" /></span>
 								<h2>1. Dataset Summary</h2>
-                                    <p>US labor statistics by industry & state, from 2017 to 2020.</p>
-                                <h2>2. Dimensions & Measures</h2>
+                                    <p>Maven Fuzzy Factory is an online retailer which has just launched their first product.</p>
+                                <h2>2. Objective</h2>
                                     <ul>
-                                        <li>Dimensions: Year, Industry, State </li>
-                                        <li>Measures: Establishments, Employees, Avg Annual Wage</li>
+                                        <li>Access and explore the Maven Fuzzy Factory database.</li>
+                                        <li>Analyze and optimize the business’ marketing channels, website, and product portfolio.
+                                            <ul class="circle">
+                                                <li>Top pageview, top entry page</li>
+                                                <li>Bounce rate</li>
+                                                <li>Product portfolio</li>
+                                                <li>Funnel conversion rate</li>
+                                            </ul>
+                                        </li>
                                     </ul>
-								<h2>3. Tool: Excel</h2>
-                                <h2>4. Data fields</h2>
-                                    <ul>
-                                        <li>Columns: 6</li>
-                                        <li>Rows: 1,918</li>
-                                    </ul>
+                                <h2>3. Language: MySQL</h2>
 
-                                    <center><img src="images\US Labor Statistics.png" alt="US Labor Statistics"></center>
+                                <footer class="major">
+									<ul class="actions special">
+										<li><a href="https://bit.ly/fuzzy_factory_sql" class="button" target="_blank">View source code</a></li>
+									</ul>
+								</footer>
                             
                                     <p class="backtohomepage">
                                         <a href="https://giangpham1410.github.io/"> BACK TO HOMEPAGE</a>
