--- a/hotel-group.html
+++ b/hotel-group.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost</h1>
-						<p>Skills: Exploratory data Analysis, storytelling</p>
+						<p>Skills: Exploratory data analysis, storytelling</p>
 					</header>
 
 				<!-- Main -->
@@ -36,7 +36,8 @@
                                         <li>Dimensions:  Booking ID, Hotel, Booking/Arrival Date, Distribution Channel, Customer Type, Country, Deposit Type, Status, Status Update, Cancelled (0/1)</li>
                                         <li>Measures: Lead Time, Nights, Guests, Revenue, Loss</li>
                                     </ul>
-                                <h2>3. Data fields</h2>
+								<h2>3. Tool: Excel</h2>
+                                <h2>4. Data fields</h2>
                                     <ul>
                                         <li>Columns: 17</li>
                                         <li>Rows: 119,390</li>
@@ -76,7 +77,7 @@
                             <li><a href="#" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li>
                         </ul>
                     </section>
-                    <p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: Giang Pham</p>
+                    <p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: giangpham1410</p>
                 </footer>
 
 			</div>
