--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<span class="logo"><img style="width: 200px; border-radius: 100px;" src="images/giang-logo.jpg" alt="" /></span>
 						<h1>Giang Pham's Portfolio</h1>
 					</header>
 
@@ -27,9 +27,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">About Me</a></li>
-							<li><a href="#first">Excel Projects</a></li>
-							<li><a href="#second">SQL Projects</a></li>
-							<li><a href="#cta">Power BI Projects</a></li>
+							<li><a href="#excel">Excel Projects</a></li>
+							<li><a href="#sql">SQL Projects</a></li>
+							<li><a href="#powerbi">Power BI Projects</a></li>
 						</ul>
 					</nav>
 
@@ -51,7 +51,7 @@
 										</header>
 										
 										<p>My background as a Salesforce Administrator and Ecommerce Specialist in the BAYA Furniture & Decoration has given me a deep foundation in working with many systems in data collection, analysis, visualization, and coming up with insights and recommendations.</p>
-										<p>I’m self-study and enjoy working with the computers and numbers. At first, I used Excel and then learned more to use other tools like SQL, Power BI, and Python to help businesses unlock the power of their data.</p>
+										<p>I’m self-study and enjoy working with the computers and numbers. At first, I used Excel and then learned more to use other tools like SQL, and Power BI to help businesses unlock the power of their data.</p>
 										<p>- Email: <b>giang.pnt1410@gmail.com</b></p>
 										<p>- Address: Ho Chi Minh city, Vietnam</p>
 									</div>
@@ -80,10 +80,10 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
+							<section id="excel" class="main special">
 								<header class="major">
-									<h2>Excel Projects</h2>
-									<h3>Skills: Pivot Tables, Power Query, DAX, Data Visualization</h3>
+									<h2><span>Excel Projects</span></h2>
+									<h3><b>Skills:</b> Pivot Tables, Power Query, DAX, Data Visualization</h3>
 								</header>
 								<ul class="features">
 									<li>
@@ -109,20 +109,42 @@
 										<p>Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost</p>
 									</li>
 								</ul>
+								<!--
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Read More</a></li>
 									</ul>
 								</footer>
+								-->
 							</section>
 
 						<!-- Second Section -->
-							<section id="second" class="main special">
+							<section id="sql" class="main special">
 								<header class="major">
-									<h2>SQL Projects</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2><span>SQL Projects</span></h2>
+									<p></p>
 								</header>
+								<ul class="features">
+									<li>
+										<a href="fuzzy-factory.html">
+											<img style="text-decoration: none;" src="images\fuzzy_factory_diagram.png" alt="Fuzzy Factory - Analyze and optimize the business’ marketing channels, website, and product portfolio" width="100%">
+										</a>
+										<p>Fuzzy Factory - Analyze and optimize the business’ marketing channels, website, and product portfolio</p>
+									</li>
+									<li>
+										<a href="120-years-olympic-history.html">
+											<img src="images\olympic-history.png" alt="120 years of Olympic history: athletes and results" width="100%">
+										</a>
+										<p>120 years of Olympic history: athletes and results</p>
+									</li>
+									<li>
+										<a href="student-marks.html">
+											<img src="images\student-marks-diagram.png" alt="Analyzing student marks" width="100%">
+										</a>
+										<p>Analyzing student marks</p>
+									</li>
+								</ul>
+								<!--
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
@@ -151,21 +173,37 @@
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
+								-->
 							</section>
 
 						<!-- Get Started -->
-							<section id="cta" class="main special">
+							<section id="powerbi" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2><span>Power BI Projects</span></h2>
+									<h3><b>Skills:</b> Connect data sources, Clean & shape, Data Model, Power Query, DAX, Visualization</h3>
 								</header>
+								<ul class="features">
+									<li>
+										<a href="adventure-works.html">
+											<img style="text-decoration: none;" src="images\adventure-works-dashboard.png" alt="Adventure Works - Sales & Customer Analysis" width="100%">
+										</a>
+										<p>Adventure Works - Sales & Customer Analysis</p>
+									</li>
+									<li>
+										<a href="human-resources.html">
+											<img src="images\human-resources-report.png" alt="Human Resources Report - Overview, Income, and Satisfaction Insights" width="100%">
+										</a>
+										<p>Human Resources Report - Overview, Income, and Satisfaction Insights</p>
+									</li>
+								</ul>
+								<!--
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button primary">Get Started</a></li>
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
+								-->
 							</section>
 
 					</div>
@@ -191,7 +229,7 @@
 								<li><a href="#" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: Giang Pham</p>
+						<p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: giangpham1410</p>
 					</footer>
 
 			</div>
