--- a/remote-working-survey.html
+++ b/remote-working-survey.html
@@ -50,7 +50,8 @@
                                         <li>Columns: 172</li>
                                         <li>Rows: 3,019</li>
                                     </ul>
-                                <h2>3. Key Insights</h2>
+                                <h2>3. Tool: Excel</h2>
+                                <h2>4. Key Insights</h2>
                                     <ul>
                                         <li>64% of employees felt to work remotely more productive in 2021, compared to 54% in 2020</li>
                                         <li>29% of these employees said that their productivity increased by 50% (or more) when working remotely to when working at employer’s workplace</li>
@@ -59,7 +60,7 @@
                                         <li>The barriers in respect of mental health have worsened</li>
                                         <li>The barriers in respect of technical have stayed about the same</li>
                                     </ul>
-                                <h2>4. Recommendations</h2>
+                                <h2>5. Recommendations</h2>
                                 <p>Based on employees' report, they feel more productive, better, and more active when working remotely so companies can consider <span style="text-decoration: underline; font-weight: bold;">adopting a hybrid approach to work</span>. Besides that, in some cases, employees are willing to negotiate for a pay cut when working remotely so this is a win-win solution for both. But when working remotely leads to some barriers and how to improve them?</p>
                                     <ul>
                                         <li>What improvements can we make toward <span style="color: red; font-weight: bold;">health barriers</span>?
