--- a/remote-working-survey.html
+++ b/remote-working-survey.html
@@ -111,7 +111,7 @@
                             <li><a href="#" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li>
                         </ul>
                     </section>
-                    <p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: Giang Pham</p>
+                    <p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: giangpham1410</p>
                 </footer>
 
 			</div>
