--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 								<ul class="features">
 									<li>
 										<a href="adventure-works.html">
-											<img style="text-decoration: none;" src="images\adventure-works-dashboard.png" alt="Adventure Works - Sales & Customer Analysis" width="100%">
+											<img style="text-decoration: none;" src="images\adventure-works-dashboard.PNG" alt="Adventure Works - Sales & Customer Analysis" width="100%">
 										</a>
 										<p>Adventure Works - Sales & Customer Analysis</p>
 									</li>
