--- a/index.html
+++ b/index.html
@@ -90,23 +90,23 @@
 										<a href="remote-working-survey.html">
 											<img src="images\remote-work-report.png" alt="Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?" width="100%">
 										</a>
-										<p>Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?</p>
+										<p class="aboveline">Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?</p>
 									</li>
 									<li>
 										<img src="images\wage-employee-by-industry.png" alt="The global Unicorn landscape" width="100%">
-										<p>The global Unicorn landscape - Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</p>
+										<p class="aboveline">The global Unicorn landscape - Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</p>
 									</li>
 									<li>
 										<a href="us-labor-statistics.html">
 											<img src="images\wage-employee-by-industry.png" alt="What do wage & employment figures look like by industry?" width="100%">
 										</a>
-										<p>US Labor Statistics - What do wage & employment figures look like by industry?</p>
+										<p class="aboveline">US Labor Statistics - What do wage & employment figures look like by industry?</p>
 									</li>
 									<li>
 										<a href="hotel-group.html">
 											<img src="images\Hotel Group.png" alt="Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost" width="100%">
 										</a>
-										<p>Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost</p>
+										<p class="aboveline">Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost</p>
 									</li>
 								</ul>
 								<!--
@@ -129,19 +129,19 @@
 										<a href="fuzzy-factory.html">
 											<img style="text-decoration: none;" src="images\fuzzy_factory_diagram.png" alt="Fuzzy Factory - Analyze and optimize the business’ marketing channels, website, and product portfolio" width="100%">
 										</a>
-										<p>Fuzzy Factory - Analyze and optimize the business’ marketing channels, website, and product portfolio</p>
+										<p class="aboveline">Fuzzy Factory - Analyze and optimize the business’ marketing channels, website, and product portfolio</p>
 									</li>
 									<li>
 										<a href="120-years-olympic-history.html">
 											<img src="images\olympic-history.png" alt="120 years of Olympic history: athletes and results" width="100%">
 										</a>
-										<p>120 years of Olympic history: athletes and results</p>
+										<p class="aboveline">120 years of Olympic history: athletes and results</p>
 									</li>
 									<li>
 										<a href="student-marks.html">
 											<img src="images\student-marks-diagram.png" alt="Analyzing student marks" width="100%">
 										</a>
-										<p>Analyzing student marks</p>
+										<p class="aboveline">Analyzing student marks</p>
 									</li>
 								</ul>
 								<!--
@@ -187,13 +187,13 @@
 										<a href="adventure-works.html">
 											<img style="text-decoration: none;" src="images\adventure-works-dashboard.PNG" alt="Adventure Works - Sales & Customer Analysis" width="100%">
 										</a>
-										<p>Adventure Works - Sales & Customer Analysis</p>
+										<p class="aboveline">Adventure Works - Sales & Customer Analysis</p>
 									</li>
 									<li>
 										<a href="human-resources.html">
 											<img src="images\human-resources-report.png" alt="Human Resources Report - Overview, Income, and Satisfaction Insights" width="100%">
 										</a>
-										<p>Human Resources Report - Overview, Income, and Satisfaction Insights</p>
+										<p class="aboveline">Human Resources Report - Overview, Income, and Satisfaction Insights</p>
 									</li>
 								</ul>
 								<!--
