--- a/120-years-olympic-history.html
+++ b/120-years-olympic-history.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?</title>
+		<title>120 years of Olympic history: athletes and results</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Analyzing student marks</h1>
+						<h1>120 years of Olympic history: athletes and results</h1>
 						<p></p>
 					</header>
 
@@ -28,7 +28,6 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images\olympic-history.png" alt="" /></span>
 								<h2>I. Dataset Summary</h2>
                                     <p>This is a historical dataset on the modern Olympic Games, including all the Games from Athens 1896 to Rio 2016.</p>
 									<p>Note that the Winter and Summer Games were held in the same year up until 1992. After that, they staggered them such that Winter Games occur on a four-year cycle starting with 1994, then Summer in 1996, then Winter in 1998, and so on. A common mistake people make when analyzing this data is to assume that the Summer and Winter Games have always been staggered.</p>
@@ -106,21 +105,20 @@
                         <dl class="alt">
                             <dt>Email</dt>
                             <dd><a href="#">giang.pnt1410@gmail.com</a></dd>
-                            <dt>Address</dt>
-                            <dd>Ho Chi Minh city, Vietnam</dd>
-                            <dt>Linkedin</dt>
+                            <dt>LinkedIn</dt>
                             <dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
                             <dt>GitHub</dt>
-                            <dd><a href="https://github.com/giangpham1410/" target="_blank">github.com/giangpham1410/</a></dd>
-                            
+                            <dd><a href="https://giangpham1410.github.io/" target="_blank">giangpham1410.github.io</a></dd>
+                            <dt>Address</dt>
+                            <dd>Ho Chi Minh city, Vietnam</dd>
                         </dl>
                         <ul class="icons">
-                            <li><a href="#" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
-                            <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-                            <li><a href="#" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li>
-                        </ul>
+							<li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://giangpham1410.github.io/"target="_blank"  class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+							<!-- <li><a href="" target="_blank" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li> -->
+						</ul>
                     </section>
-                    <p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: giangpham1410</p>
+                    <p class="copyright">&copy; Source Code: <a href="https://html5up.net/">HTML5 UP</a> | Re-design: giangpham1410</p>
                 </footer>
 
 			</div>
