--- a/fuzzy-factory.html
+++ b/fuzzy-factory.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?</title>
+		<title>Fuzzy Factory - Analyze and optimize the business’ marketing channels, website, and product portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,7 +28,6 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images\fuzzy_factory_diagram.png" alt="" /></span>
 								<h2>1. Dataset Summary</h2>
                                     <p>Maven Fuzzy Factory is an online retailer which has just launched their first product.</p>
                                 <h2>2. Objective</h2>
@@ -44,6 +43,8 @@
                                         </li>
                                     </ul>
                                 <h2>3. Language: MySQL</h2>
+								<h2>4. Diagram</h2>
+								<span class="image main"><img src="images\fuzzy-factory-diagram.png" alt="" /></span>
 
                                 <footer class="major">
 									<ul class="actions special">
@@ -69,19 +70,18 @@
                         <dl class="alt">
                             <dt>Email</dt>
                             <dd><a href="#">giang.pnt1410@gmail.com</a></dd>
-                            <dt>Address</dt>
-                            <dd>Ho Chi Minh city, Vietnam</dd>
-                            <dt>Linkedin</dt>
+                            <dt>LinkedIn</dt>
                             <dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
                             <dt>GitHub</dt>
-                            <dd><a href="https://github.com/giangpham1410/" target="_blank">github.com/giangpham1410/</a></dd>
-                            
+                            <dd><a href="https://giangpham1410.github.io/" target="_blank">giangpham1410.github.io</a></dd>
+                            <dt>Address</dt>
+                            <dd>Ho Chi Minh city, Vietnam</dd>
                         </dl>
                         <ul class="icons">
-                            <li><a href="#" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
-                            <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-                            <li><a href="#" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li>
-                        </ul>
+							<li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://giangpham1410.github.io/"target="_blank"  class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+							<!-- <li><a href="" target="_blank" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li> -->
+						</ul>
                     </section>
                     <p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: giangpham1410</p>
                 </footer>
