--- a/global-unicorn-landscape.html
+++ b/global-unicorn-landscape.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost</title>
+		<title>The global Unicorn landscape - Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost</h1>
-						<p>Skills: Exploratory data analysis, data visualization, storytelling</p>
+						<h1>The global Unicorn landscape - Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</h1>
+						<p>Skills: Cleaning data, exploratory data analysis, data visualization, storytelling</p>
 					</header>
 
 				<!-- Main -->
@@ -28,22 +28,20 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images\hotel-group.png" alt="Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost" /></span>
+								<span class="image main"><img src="images\global-unicorn-landscape.png" alt="Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost" /></span>
 								<h2>1. Dataset Summary</h2>
-                                    <p>Hotel booking data, from July 2015 to August 2017.</p>
+                                    <p>A unicorn company is a private company with a valuation of more than $1 billion, and today there are over 1,000 unicorn companies around the world!</p>
                                 <h2>2. Dimensions & Measures</h2>
                                     <ul>
-                                        <li>Dimensions:  Booking ID, Hotel, Booking/Arrival Date, Distribution Channel, Customer Type, Country, Deposit Type, Status, Status Update, Cancelled (0/1)</li>
-                                        <li>Measures: Lead Time, Nights, Guests, Revenue, Loss</li>
+                                        <li>Dimensions:  Dimensions: Company, Date Joined, Industry, City, Country, Continent, Year Founded, Select Investors</li>
+                                        <li>Measures: Valuation, Funding</li>
                                     </ul>
 								<h2>3. Tool: Excel</h2>
                                 <h2>4. Data fields</h2>
                                     <ul>
-                                        <li>Columns: 17</li>
-                                        <li>Rows: 119,390</li>
+                                        <li>Columns: 10</li>
+                                        <li>Rows: 1,974</li>
                                     </ul>
-
-                                    <center><img src="images\Hotel Group Data.png" alt="Hotel Group Data"></center>
                             
                                     <p class="backtohomepage">
                                         <a href="https://giangpham1410.github.io/"> BACK TO HOMEPAGE</a>
