--- a/adventure-works.html
+++ b/adventure-works.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?</title>
+		<title>Adventure Works - Sales & Customer Analysis</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Adventure Works - Sales & Customer Analysis</h1>
-						<p></p>
+						<p>Skills: ETL, data analysis, DAX, data visualization</p>
 					</header>
 
 				<!-- Main -->
@@ -70,21 +70,20 @@
                         <dl class="alt">
                             <dt>Email</dt>
                             <dd><a href="#">giang.pnt1410@gmail.com</a></dd>
-                            <dt>Address</dt>
-                            <dd>Ho Chi Minh city, Vietnam</dd>
-                            <dt>Linkedin</dt>
+                            <dt>LinkedIn</dt>
                             <dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
                             <dt>GitHub</dt>
-                            <dd><a href="https://github.com/giangpham1410/" target="_blank">github.com/giangpham1410/</a></dd>
-                            
+                            <dd><a href="https://giangpham1410.github.io/" target="_blank">giangpham1410.github.io</a></dd>
+                            <dt>Address</dt>
+                            <dd>Ho Chi Minh city, Vietnam</dd>
                         </dl>
                         <ul class="icons">
-                            <li><a href="#" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
-                            <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-                            <li><a href="#" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li>
-                        </ul>
+							<li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://giangpham1410.github.io/"target="_blank"  class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+							<!-- <li><a href="" target="_blank" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li> -->
+						</ul>
                     </section>
-                    <p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: giangpham1410</p>
+                    <p class="copyright">&copy; Source Code: <a href="https://html5up.net/">HTML5 UP</a> | Re-design: giangpham1410</p>
                 </footer>
 
 			</div>
