--- a/electric-store.html
+++ b/electric-store.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost</title>
+		<title>Electric store - Sales analysis</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost</h1>
-						<p>Skills: Exploratory data analysis, data visualization, storytelling</p>
+						<h1>Electric store - Sales analysis</h1>
+						<p>Libraries: Pandas, Matplotlib, Seaborn</p>
 					</header>
 
 				<!-- Main -->
@@ -28,22 +28,34 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images\hotel-group.png" alt="Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost" /></span>
-								<h2>1. Dataset Summary</h2>
-                                    <p>Hotel booking data, from July 2015 to August 2017.</p>
-                                <h2>2. Dimensions & Measures</h2>
-                                    <ul>
-                                        <li>Dimensions:  Booking ID, Hotel, Booking/Arrival Date, Distribution Channel, Customer Type, Country, Deposit Type, Status, Status Update, Cancelled (0/1)</li>
-                                        <li>Measures: Lead Time, Nights, Guests, Revenue, Loss</li>
-                                    </ul>
-								<h2>3. Tool: Excel</h2>
-                                <h2>4. Data fields</h2>
-                                    <ul>
-                                        <li>Columns: 17</li>
-                                        <li>Rows: 119,390</li>
-                                    </ul>
+								<h2>I. Dataset Summary</h2>
+                                    <p>The electric store sells technology products such as phones, charging cables...</p>
+                                <h2>II. Data fields</h2>
+								<ol>
+									<li><span class="textbackground">Order ID</span>: An Order ID is the number system that Amazon uses exclusively to keep track of orders. Each order receives its own Order ID that will not be duplicated. This number can be useful to the seller when attempting to find out certain details about an order such as shipment date or status.</li>
+									<li><span class="textbackground">Product</span>: The product that has been sold.</li>
+									<li><span class="textbackground">Quantity Ordered</span>: Ordered Quantity is the total item quantity ordered in the initial order (without any changes).</li>
+									<li><span class="textbackground">Price Each</span>: The price of each product.</li>
+									<li><span class="textbackground">Order Date</span>: This is the date the customer is requesting the order be shipped.</li>
+									<li><span class="textbackground">Purchase Address</span>: The purchase order is prepared by the buyer, often through a purchasing department. The purchase order, or PO, usually includes a PO number, which is useful in matching shipments with purchases; a shipping date; billing address; shipping address; and the requested items, quantities, and price.</li>
+								</ol>
+								
+                                <h2>III. Language: Python</h2>
+								<h2>IV. Tasks</h2>
+								<ol>
+									<li>What was the best month for sales? How much was earned that month?</li>
+									<li>What city had the highest number of sales?</li>
+									<li>What time should we display advertisements to maximize the likelihood of customers buying products?</li>
+									<li>What time had the highest number of sales?</li>
+									<li>What products are most often sold together?</li>
+									<li>What product sold the most?</li>
+								</ol>
 
-                                    <center><img src="images\Hotel Group Data.png" alt="Hotel Group Data"></center>
+                                <footer class="major">
+									<ul class="actions special">
+										<li><a href="https://bit.ly/electric_store_py" class="button" target="_blank">View source code</a></li>
+									</ul>
+								</footer>
                             
                                     <p class="backtohomepage">
                                         <a href="https://giangpham1410.github.io/"> BACK TO HOMEPAGE</a>
@@ -76,7 +88,7 @@
 							<!-- <li><a href="" target="_blank" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li> -->
 						</ul>
                     </section>
-                    <p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: giangpham1410</p>
+                    <p class="copyright">&copy; Source Code: <a href="https://html5up.net/">HTML5 UP</a> | Re-design: giangpham1410</p>
                 </footer>
 
 			</div>
